# saf-physics-ltr

./: .env.example  .gitignore  .pre-commit-config.yaml  Assumptions-SAF-Physics.md  DECISIONS.md  How the Open Knowledge Format can improve data sharing 1.md  LICENSE  README.md  README_PL.md  Zalozenia-Srodowisko-Fizyka.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: agent-skill-binding.json  copilot-instructions.md
Case-Template/: README.md
Dokumentacja/: Analiza-Architektury-SAF-Layered-Migration.md  Artefakty-Wymagania.md  Audyt-Rol-i-Kompetencji-2026-05-30.md  Dokumentacja-Systemowa.md  Evidence-Packet-Gate.md  Instrukcja-Uzycia.md  Karta-Badania.md  Konsolidacja-Statusow.md  Podsumowanie-Gate.md  Rejestr-Konfiguracji-Projektu.md  Rejestr-Konfliktow-i-Eskalacji.md  Review-Jakosci-Gate3.md  Runbook-Gate-Executor.md
mcp/: capability_catalog.json  mcp-baseline.json  mcp-baseline.sha256
tests/: test_contract_guard.py  test_escalation_notifier.py  test_escalation_queue_manager.py  test_ops_cycle_runner.py  test_ops_health_snapshot.py  test_owner_weekly_summary.py  test_skill_runner.py  test_smoke.py
tools/: ads_search.py  arxiv_search.py  binet_numeric_validation_t04.py  build_evidence_packet.py  cas_test_harness.py  chart_artifact_pipeline_check.py  contract_guard.py  definition_consistency_check.py  escalation_notifier.py  escalation_queue_manager.py  gate_timing_logger.py  generate_t04_charts.py  lint_ltr.py  manuscript_completeness_check.py  manuscript_supplement_splitter.py  mcp_baseline.py  migration_metrics_report.py  route_model.py  (+10 more)
(+144 files in other folders)
